In progress - pre-release
    - Implemented qpp::QCircuit::
          kron()     - Kronecker product with another quantum circuit
                       description
          measureZ() - new overload that allows multiple targets at once
    - Implemented QCircuit qpp::adjoint(QCircuit) for computing the
      adjoint of a given quantum circuit description
    - API change qpp::QCircuit::get_gate_depth() to qpp::QCircuit::get_depth(),
      so now measurements are taken into account when computing depths
    - Added "classes/circuits/layouts.h" header file for dealing with different
      physical qudit layouts, including:
          qpp::GridView   - Qudits on an orthogonal grid
          qpp::GridView3D - Qudits on a 3D orthogonal lattice

Version 1.3 - 25 July 2019
    - Minimum required CMake version is now 3.2
    - Added MSVC support for CMake
    - Updated Google Test to version 1.8.1
    - Added enum {RES, PROB, ST} in "constants.h" for using with std::get<> on
      the result of qpp::measure() etc.
    - Split the "classes/circuits.h" into "classes/circuits/circuits.h" and
      "classes/circuits/engines.h"
    - Added noisy quantum engine for non-correlated noise
    - Added noisy teleportation example (that uses a noisy quantum engine) in
      "examples/circuits/noisy_teleport_qubit_circuit.cpp"
    - Implemented qpp::QCircuit::
          QFT()            - Quantum Fourier Transform
          TFQ()            - inverse Quantum Fourier Transform
          get_gate_depth() - circuit gate depth
          add_qudit()      - adds qudit(s) on the fly
          add_dit()        - adds classical dit(s) on the fly
          add_circuit()    - adds a quantum circuit description to the current
                             one
          replicate()      - replicates (repeats) the current quantum circuit
                             description
    - Implemented qpp::Bit_circuit::
          get_gate_count() - classical reversible circuit gate count